# incae-llm-seminar

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  notebook-smoke-test.yml
configs/: data_sources.yaml  session1.yaml  session2.yaml
data/: README.md
data/raw/: DEIBalanced.pkl  DEILabels.pkl  DEISampleBalanced.pkl  README.md  SentimentLabels.pkl  SentimentSampleBalanced.pkl  equity_tweets.xlsx
data/sample/: NewSentence_Classified_DEI.csv  NewSentencse_Classified_Sentiment.csv  session1_input.csv  session2_input.csv
docs/: getting-started.md  links.md
notebooks/session1/: 01_classifier_basics.ipynb
notebooks/session2/: 01_sentiment_classifier.ipynb
scripts/: bootstrap.ps1  bootstrap.sh  fetch_data.py  notebook_smoke_test.py  run_session1.py  run_session2.py
src/incae_llm/: __init__.py  config.py
src/incae_llm/classifiers/: __init__.py  hf.py
src/incae_llm/pipelines/: inference.py
src/incae_llm/prompts/: __init__.py
tests/: test_config.py
